src/objects/HWS_RetrofitAccount__c.object
<CustomObject>
    <fields>
        <fullName>HWS_AccountNumber__c</fullName>
        <formula>HWS_Account__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legal Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retrofit Accounts</relationshipLabel>
        <relationshipName>HWS_Retrofit_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>HWS_P20ID__c</fullName>
        <formula>HWS_Account__r.NCP_P20_ID__c</formula>
        <label>P20 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ServiceContract__c</fullName>
        <label>ServiceContract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Retrofit Accounts</relationshipLabel>
        <relationshipName>HWS_Retrofit_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>HWS_ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Retrofit Account</label>
    <nameField>
        <displayFormat>RTF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retrofit Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HWS_ValidateSoldToAccount</fullName>
        <active>true</active>
        <description>Developed for NOKIASC-37155</description>
        <errorConditionFormula>(TEXT(HWS_Account__r.Country__c) != HWS_ServiceContract__r.CH_CountryName__c) 
    &amp;&amp;  
    (HWS_ServiceContract__r.HWS_Retrofit_Type__c == &apos;Local Retrofit&apos;)</errorConditionFormula>
        <errorDisplayField>HWS_Account__c</errorDisplayField>
        <errorMessage>Country of the Sold To Account must match the country listed on the Service Contract.</errorMessage>
    </validationRules>
</CustomObject>